2000-10-26  John Harper  <jsh@eazel.com>

	* sawfish/wm/workspace.jl, sawfish/wm/commands/describe.jl,
	sawfish/wm/ext/3d-hack.jl: made some commands #:user-level
	expert

	* sawfish/wm/util/nokogiri.jl (nokogiri-report-commands): fixed
	and/or typo

	* sawfish/wm/util/groups.jl (persistent-group-ids): changed
	type of this option from `(list string)' to `(list symbol)' as
	it should have been

2000-10-25  John Harper  <jsh@eazel.com>

	* sawfish/wm/focus.jl (focus-click): the logic to ungrab the
	pointer in non-click-through mode was reversed (i.e. broken)

	* sawfish/wm/workspace.jl (ws-add-window): set swapped-in
	property of sticky windows, otherwise they don't get swapped
	out the first time a new workspace is selected

2000-10-24  John Harper  <jsh@eazel.com>

	* sawfish/wm/swapper.jl (workspace-swap-out,
	workspace-swap-in): don't swap non-plist attributes of sticky
	windows (this means that sticky geometry is fixed, probably as
	it should be)

	* sawfish/wm/util/window-order.jl: made the `order' property
	workspace-local once more (there's a remark earlier in this
	ChangeLog about that being non-intuitive, but it's better that
	way for sticky windows)
	(window-order-pop-low-sticky-windows): removed this hack, it's
	not required now order is workspace-local

	* sawfish/wm/workspace.jl (select-workspace): swap-in data for
	all sticky windows as well as normal windows in the new
	workspace

	* sawfish/wm/ext/match-window.jl: fixed :require fields to use
	sawfish.wm.ext.match-window instead of just match-window

	* sawfish/wm/focus.jl (focus-enter-fun, focus-leave-fun):
	accept an extra MODE parameter		
	(enter-exit mode): pointer-leave events only cause focus to be
	jettisoned if (eq MODE 'normal)

	* sawfish/wm/focus.jl (focus-click): call forget-button-press
	after either replaying or ungrabbing pointer events (otherwise
	following events are marked as click2, which won't trigger the
	bindings in the click-to-focus-map)
