@@ -19,4 +19,10 @@
 ;; along with sawmill; see the file COPYING.  If not, write to
 ;; the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
 
-(custom-set-variable 'tooltips-enabled t 'tooltips)
+(custom-set-typed-variable (quote workspace-geometry) (quote (4 1 . 1)) (quote workspace-geometry))
+(custom-set-typed-variable (quote tooltips-show-doc-strings) (quote ()) (quote boolean))
+(custom-set-typed-variable (quote warp-to-selected-windows) (quote ()) (quote boolean))
+(custom-set-typed-variable (quote cycle-warp-pointer) (quote ()) (quote boolean))
+(custom-set-typed-variable (quote focus-mode) (quote click) (quote symbol))
+(custom-set-keymap (quote window-keymap) (quote (keymap (move-window-interactively . "M-Button1-Move") (popup-window-menu . "M-Button2-Click1") (raise-lower-window . "M-Button3-Click1") (quote-event . "M-C-q") (send-to-next-workspace . "M-C-Right") (send-to-previous-workspace . "M-C-Left") (lower-window . "M-C-Down") (raise-window . "M-C-Up") (raise-and-pass-through-click . "Button1-Click1"))))
+(custom-set-variable (quote tooltips-enabled) t (quote tooltips))
