@@ -1,3 +1,11 @@
+2000-10-28  John Harper  <jsh@eazel.com>
+
+	* sawfish/wm/custom-defaults.jl: added some more settings;
+	hopefully they give a better default configuration..
+
+	* sawfish/wm/custom.jl: added command line option
+	`--custom-file' to set the value of custom-user-file
+
 2000-10-26  John Harper  <jsh@eazel.com>
 
 	* sawfish/wm/workspace.jl, sawfish/wm/commands/describe.jl,
